--- a/web/index.html
+++ b/web/index.html
@@ -60,12 +60,18 @@
       </div>
       <div class="row">
           <div class="col">
+            <div class="snapper">
+              <img width="50px" height="50px" class="left" src="smiley.svg">
+              <img width="50px" height="50px" class="right" src="saddy.svg">
+            </div>
             <svg id="emotion-graph" width="100%" height="1000px">
               <defs>
                 <linearGradient id="Gradient1" x1="1" x2="0" y1="0" y2="0">
                   <stop offset="0%" stop-color="pink"/>
                   <stop offset="100%" stop-color="lightblue"/>
                 </linearGradient>
+              </defs>
+              <image width="50" height="50" class="snappy" src="smiley.svg">
             </svg>
           </div>
       </div>
