--- a/server/web/index.html
+++ b/server/web/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="jumotron text-center">
-      <h1>Spot</h1>
+      <h1 class="title">Spot</h1>
       <p>The virtual friend you need</p>
     </div>
     <div class="container">
@@ -60,10 +60,12 @@
       </div>
       <div class="row">
           <div class="col">
-            <div class="snapper">
-              <img width="50px" height="50px" class="left" src="smiley.svg">
-              <img width="50px" height="50px" class="right" src="saddy.svg">
-            </div>
+            <svg class="snapper" height="70px" width="100%" style="z-index: 1;">
+              <image width="50" height="50" x="35" y="20" xlink:href="/smiley.svg"></image>
+              <image width="50" height="50" x="365" y="20" xlink:href="/saddy.svg"></image>
+            </svg>
+            <svg class="snapper" height="20px" width="100%" id="emotion-graph-top-bar">
+            </svg>
             <svg id="emotion-graph" width="100%" height="1000px">
               <defs>
                 <linearGradient id="Gradient1" x1="1" x2="0" y1="0" y2="0">
@@ -71,7 +73,6 @@
                   <stop offset="100%" stop-color="lightblue"/>
                 </linearGradient>
               </defs>
-              <image width="50" height="50" class="snappy" src="smiley.svg">
             </svg>
           </div>
       </div>
