Freeze of the old server

--- a/server/web/index.html
+++ b/server/web/index.html
@@ -60,13 +60,14 @@
       </div>
       <div class="row">
           <div class="col">
-            <svg class="snapper" height="70px" width="100%" style="z-index: 1;">
-              <image width="50" height="50" x="35" y="20" xlink:href="/smiley.svg"></image>
-              <image width="50" height="50" x="365" y="20" xlink:href="/saddy.svg"></image>
+            <svg class="snapper" height="70px" width="450px" style="z-index: 1;">
+              <image width="50" height="50" x="35" y="20" xlink:href="/smiley.png"></image>
+              <image width="50" height="50" x="365" y="20" xlink:href="/saddy.png"></image>
+              <text fill="white" y="40" x="175">Stress percentage</text>
             </svg>
             <svg class="snapper" height="20px" width="100%" id="emotion-graph-top-bar">
             </svg>
-            <svg id="emotion-graph" width="100%" height="1000px">
+            <svg id="emotion-graph" width="450px" height="1000px" viewBox="0 0 450 1000">
               <defs>
                 <linearGradient id="Gradient1" x1="1" x2="0" y1="0" y2="0">
                   <stop offset="0%" stop-color="pink"/>
